[project]
name = "pythonproject7"
version = "0.1.0"
description = ""
authors = [
    {name = "fantasticlion",email = "den20020805@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.build"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.2"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"

